--- a/sugarProject/wwwroot/css/site.css
+++ b/sugarProject/wwwroot/css/site.css
@@ -58,7 +58,10 @@ li {
 }
 
 .center {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
     width: 35%;
@@ -70,50 +73,23 @@ li {
     padding-left: 50px;
     font-family: Sans-serif;
 }
-.leftGeneral {
-    display: block;
-    margin-left: 0px;
-    margin-right: auto;
-    width: 35%;
-    outline-offset: 1px;
-    padding: 40px;
-    padding-top: 40px;
-    padding-right: 50px;
-    padding-bottom: 40px;
-    padding-left: 50px;
-    font-family: Sans-serif;
+
+.PageLayout {
+
+    display: flex;
+    flex-direction: column;
+    
 }
 
-.centerTitle {
-    display: block;
+.extendCenterDown {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 1000px;
+    gap: 50px;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
-    width: 35%;
-    font-size: 24px;
-}
-
-.left {
-    display: block;
-    margin-left: 0px;
-    margin-right: auto;
-    margin-top: 15px;
-    width: 35%;
-    font-size: 18px;
-}
-
-.fancyButton {
-    padding: 10px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
-    background-color: #686d94;
-    border: none;
-    border-radius: 5px;
-    text-align: center;
-    transition: background-color 0.3s ease;
-    cursor: pointer;
-}
-
-.fancyButton:hover {
-    background-color: #2e333e;
+    width: 65%;
+    font-family: Sans-serif;
 }
