--- a/sugarProject/Pages/Shared/_SugarInBread.cshtml
+++ b/sugarProject/Pages/Shared/_SugarInBread.cshtml
@@ -1,12 +1,10 @@
 ﻿<!DOCTYPE html>
+
 <html>
 <head>
-    <link href="../css/site.css" rel="stylesheet" />
-    <meta charset="utf-8" />
-    <title></title>
+    <meta name="viewport" content="width=device-width" />
+    <title>@ViewBag.Title</title>
 </head>
-
-
 <body style="background-color:burlywood">
 
     <div class="PageLayout">
@@ -35,29 +33,30 @@
 
             <div>
                 <h1>
-                    General info about sugars
+                    @
                 </h1>
             </div>
 
             <div style="background-color:blanchedalmond">
 
+
+
                 <div style="padding:40px">
 
 
                     <div>
-
                     </div>
                     <div>
-                        
-                        Sugar is the generic name for sweet-tasting, soluble carbohydrates, many of which are used in food. Simple sugars, also called monosaccharides, include glucose, fructose, and galactose. Compound sugars, also called disaccharides or double sugars, are molecules made of two bonded monosaccharides; common examples are sucrose (glucose + fructose), lactose (glucose + galactose), and maltose (two molecules of glucose). White sugar is a refined form of sucrose. In the body, compound sugars are hydrolysed into simple sugars.
+
+                        here are some sugar facts
 
                     </div>
                     <br />
-                    <img width="400px" src="..\imgs\sugar.jpeg" />
+                    <img width="400px" src="..\imgs\breadSugar.jpg" />
                 </div>
             </div>
 
-           
+
         </div>
 
 
@@ -68,9 +67,3 @@
 
 </body>
 </html>
-
-<style>
-    body {
-        background-size: 2200px;
-    }
-</style>
