--- a/sugarProject/Pages/Index.cshtml
+++ b/sugarProject/Pages/Index.cshtml
@@ -4,4 +4,9 @@
     ViewData["Title"] = "Home page";
 }
 
-Hi!
+@section Title
+{
+	Welcome to the Sugar Project
+}
+
+<img width="500" src="~/imgs/breadsugar.jpg" />
