--- a/sugarProject/Pages/Shared/_SugarInBread.cshtml
+++ b/sugarProject/Pages/Shared/_SugarInBread.cshtml
@@ -15,7 +15,7 @@
 
         <div>
             <ul>
-                <li><a asp-page="/main">Home</a></li>
+                <li><a asp-page="/index">Home</a></li>
                 <li><a asp-page="/secondaryPage">Secondary page</a></li>
                 <li><a asp-page="/sugarInBread">Sugar in bread</a></li>
                 <li><a href="">filler3</a></li>
