--- a/sugarProject/Pages/secondaryPage.cshtml
+++ b/sugarProject/Pages/secondaryPage.cshtml
@@ -3,3 +3,13 @@
 @{
 	ViewData["Title"] = "main";
 }
+@section Title
+{
+	General Info About Sugar
+}
+
+						Sugar is the generic name for sweet-tasting, soluble carbohydrates, many of which are used in food. Simple sugars, also called monosaccharides, include glucose, fructose, and galactose. Compound sugars, also called disaccharides or double sugars, are molecules made of two bonded monosaccharides; common examples are sucrose (glucose + fructose), lactose (glucose + galactose), and maltose (two molecules of glucose). White sugar is a refined form of sucrose. In the body, compound sugars are hydrolysed into simple sugars.
+
+<br />
+<br />
+<img width="400px" src="..\imgs\sugar.jpeg" />
