--- a/sugarProject/Pages/Shared/_SugarInBread.cshtml
+++ b/sugarProject/Pages/Shared/_SugarInBread.cshtml
@@ -18,7 +18,7 @@
                 <li><a asp-page="/index">Home</a></li>
                 <li><a asp-page="/secondaryPage">Secondary page</a></li>
                 <li><a asp-page="/sugarInBread">Sugar in bread</a></li>
-                <li><a href="">filler3</a></li>
+                <li><a asp-page="/ShowUsers">show users</a></li>
 
             </ul>
         </div>
