--- a/sugarProject/Pages/Register.cshtml
+++ b/sugarProject/Pages/Register.cshtml
@@ -64,11 +64,30 @@
                 phone number.
             </div>
         </div>
+
+        <div class="form-group">
+            <label for="reg_lname">Gender: </label>
+
+
+            Male
+            <input asp-for="user.gender" name="gender" type="radio" value="Male" id="reg_gender" style="margin-right: 15px;">
+            Female
+            <input asp-for="user.gender" name="gender" type="radio" value="Female" style="margin-right: 15px;">
+            Other
+            <input asp-for="user.gender" name="gender" type="radio" value="Other" style="margin-right: 15px;" checked>
+
+            <div class="invalid-feedback" id="reg_errorgender">
+                Please enter your Gender.
+            </div>
+        </div>
+
         <button type="submit" name="submit" value="Register" class="btn btnprimary
-btn-block" style="background-color: #FF7F50; bordercolor:#
-FF7F50; opacity: 0.8;">
+btn-block" style="background-color: #FF7F50; border-color:#FF7F50; opacity: 0.8;">
             Register
         </button>
     </form>
-    @Html.Raw(@Model.st)
+    <div class="table table-striped table-bordered table-hover table-dark table-responsive">
+        @Html.Raw(@Model.st)
+
+    </div>
 </div>
