--- a/sugarProject/Pages/Register.cshtml
+++ b/sugarProject/Pages/Register.cshtml
@@ -70,11 +70,11 @@
 
 
             Male
-            <input asp-for="user.gender" name="gender" type="radio" value="Male" id="reg_gender" style="margin-right: 15px;">
+            <input asp-for="user.gender" type="radio" value="Male" id="reg_gender" style="margin-right: 15px;">
             Female
-            <input asp-for="user.gender" name="gender" type="radio" value="Female" style="margin-right: 15px;">
+            <input asp-for="user.gender" type="radio" value="Female" style="margin-right: 15px;">
             Other
-            <input asp-for="user.gender" name="gender" type="radio" value="Other" style="margin-right: 15px;" checked>
+            <input asp-for="user.gender" type="radio" value="Other" style="margin-right: 15px;">
 
             <div class="invalid-feedback" id="reg_errorgender">
                 Please enter your Gender.
