--- a/sugarProject/Pages/Shared/_SugarInBread.cshtml
+++ b/sugarProject/Pages/Shared/_SugarInBread.cshtml
@@ -14,7 +14,7 @@
 
 
         <div>
-            <ul>
+            <ul style="margin:0px; padding:0px;">
                 <li><a asp-page="/index">Home</a></li>
                 <li><a asp-page="/secondaryPage">Secondary page</a></li>
                 <li><a asp-page="/sugarInBread">Sugar in bread</a></li>
