--- a/sugarProject/Pages/Shared/_SugarInBread.cshtml
+++ b/sugarProject/Pages/Shared/_SugarInBread.cshtml
@@ -6,7 +6,7 @@
     
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
-<body style="background-color:burlywood">
+<body style="background-color:burlywood; margin: 0px;">
 
     <div class="PageLayout">
 
@@ -19,7 +19,7 @@
                 <li><a asp-page="/secondaryPage">Secondary page</a></li>
                 <li><a asp-page="/sugarInBread">Sugar in bread</a></li>
                 <li><a asp-page="/ShowUsers">show users</a></li>
-
+                <li><a asp-page="/Register">Register</a></li>
             </ul>
         </div>
         <br />
