--- a/sugarProject/wwwroot/css/site.css
+++ b/sugarProject/wwwroot/css/site.css
@@ -18,15 +18,15 @@ html {
 }
 
 body {
-    margin-bottom: 60px;
+    margin: 0px;
 }
 
 
 
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     overflow: hidden;
     background-color: #bbb5b5;
     
