--- a/sugarProject/Pages/Register.cshtml
+++ b/sugarProject/Pages/Register.cshtml
@@ -73,7 +73,7 @@
                 <div class="input-group">
                     <div class="input-group-prepend">
                         <select asp-for="user.prefix" class="form-select" id="reg_phone_prefix" required>
-                            <option value="" disabled selected>Prefix</option>
+                            <option value="0" disabled selected>Prefix</option>
                             <option value="1">+1 (USA)</option>
                             <option value="44">+44 (UK)</option>
                             <option value="33">+33 (France)</option>
