--- a/sugarProject/Pages/Register.cshtml
+++ b/sugarProject/Pages/Register.cshtml
@@ -89,13 +89,11 @@
                     <div class="input-group-prepend">
                         <select asp-for="user.prefix" class="form-select" id="reg_phone_prefix" required>
                             <option value="0" disabled selected>Prefix</option> 
-                            <option value="1">+1</option> <!-- TODO: ADD DB -->
-                            <option value="44">+44</option>
-                            <option value="33">+33</option>
-                            <option value="972">+972</option>
-                            <option value="91">+91</option>
-                            <option value="61">+61</option>               
-                        </select>
+                                @foreach(string prefix in @Model.prefixes)
+                                {
+                                    <option value="@prefix">+@prefix</option>
+                                }
+                            </select>
                     </div>
                     <input type="tel" asp-for="user.phone" class="form-control"
                            id="reg_phone" oninput="checkPhone()" maxlength="15" required />
