--- a/sugarProject/Pages/Register.cshtml
+++ b/sugarProject/Pages/Register.cshtml
@@ -83,6 +83,17 @@
                 Please enter your
                 last name.
             </div>
+
+            <div class="form-group">
+            <label for="reg_lname">user Name</label>
+            <input type="text" asp-for="user.uName" class="form-control"
+                   id="reg_lname" maxlength="25" required />
+            <div class="invalid-feedback" id="reg_erroruname">
+                Please enter your
+                user name.
+            </div>
+
+
             <div class="form-group">
                 <label for="reg_phone">Phone</label>
                 <div class="input-group">
