Login Form and Time Date - complete

--- a/sugarProject/Pages/Index.cshtml
+++ b/sugarProject/Pages/Index.cshtml
@@ -8,5 +8,9 @@
 {
 	Welcome to the Sugar Project
 }
-
+<style>
+	.center {
+		width: 40%;
+	}
+</style>
 <img width="500" src="~/imgs/breadsugar.jpg" />
