--- a/sugarProject/Pages/Shared/_SugarInBread.cshtml
+++ b/sugarProject/Pages/Shared/_SugarInBread.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
 	<script src="~/js/time.js"></script>
     <link href="~/css/site.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <script>
     window.onload = (event) => {
@@ -25,7 +26,10 @@
                 <li><a asp-page="/sugarInBread">Sugar in bread</a></li>
                 <li><a asp-page="/ShowUsers">Show users</a></li>
                 <li><a asp-page="/Register">Register</a></li>
-                <li style="margin-left: auto; margin-right: 10px; margin-top: 10px;"><div class="list-inline-item" id="time"></div></li>
+                <li style="margin-left: 900px; display: inline-flex; align-items: center;">
+                    Welcome guest, <a asp-page="/Login">Login</a>
+                </li>
+                <li style="margin-left: auto; margin-right: 10px; margin-top: 14px;"><div class="list-inline-item" id="time"></div></li>
             </ul>
         </div>
         <br />
