--- a/sugarProject/Pages/Index.cshtml
+++ b/sugarProject/Pages/Index.cshtml
@@ -13,4 +13,8 @@
 		width: 40%;
 	}
 </style>
+@{
+	VisitorService visitorService = ServiceProviderAccessor.ServiceProvider.GetService<VisitorService>();
+	<span>Total visitors: @visitorService.GetVisitorCount()</span>
+}
 <img width="500" src="~/imgs/breadsugar.jpg" />
