--- a/sugarProject/Pages/Login.cshtml
+++ b/sugarProject/Pages/Login.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <head>
-    <script src="~/js/errorvalidate.js"></script>
+	<script src="~/js/errorvalidatelogin.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <script>
@@ -38,7 +38,7 @@
           onreset="resetForm();" class="needs-validation" novalidate>
         <div class="form-group">
             <label for="reg_email">Email</label>
-            <input type="email" asp-for="user.eMail" class="form-control"
+            <input type="email" asp-for="login_email" class="form-control"
                    placeholder="abc.efg@gmail.co.il" oninput="checkEmail()"
                    id="reg_email" maxlength="25" required />
             <div class="invalid-feedback" id="reg_errormail">
@@ -49,7 +49,7 @@
 
         <div class="form-group">
             <label for="reg_password">Password</label>
-            <input type="password" asp-for="user.pass" class="form-control"
+            <input type="password" asp-for="login_password" class="form-control"
                    id="reg_password" oninput="checkPass()" maxlength="25" required />
             <div class="invalid-feedback" id="reg_errorpass">
                 Please enter a
@@ -63,6 +63,5 @@ btn-block" style="background-color: #FF7F50; border-color:#FF7F50; opacity: 0.8;
             login
         </button>
 		@Html.AntiForgeryToken()
-    </form>
-   
+    </form>   
 </div>
