--- a/sugarProject/Pages/Index.cshtml
+++ b/sugarProject/Pages/Index.cshtml
@@ -19,5 +19,6 @@
 
 	<span>Total visitors: @visitorService.GetVisitorCount()</span>
 	<span>total logins: @loginService.GetloginCount()</span>
+	<span>@Model.fName</span>
 }
 <img width="500" src="~/imgs/breadsugar.jpg" />
