--- a/sugarProject/Pages/Login.cshtml
+++ b/sugarProject/Pages/Login.cshtml
@@ -3,7 +3,9 @@
 @using Microsoft.AspNetCore.Http
 @{
 }
+
 <head>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="~/js/errorvalidatelogin.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
