--- a/sugarProject/Pages/UpdateUser.cshtml
+++ b/sugarProject/Pages/UpdateUser.cshtml
@@ -27,7 +27,7 @@
           onreset="resetForm();" class="needs-validation" novalidate>
         <div class="form-group">
             <label for="reg_email">Email</label>
-            <input type="email" asp-for="@Model.user.eMail" class="form-control"
+            <input type="email" asp-for="@Model.email" class="form-control"
                    placeholder="abc.efg@gmail.co.il" oninput="checkEmail()"
                    id="reg_email" maxlength="25" value="@Model.user.eMail" required />
             <div class="invalid-feedback" id="reg_errormail">
@@ -38,7 +38,7 @@
 
         <div class="form-group">
             <label for="reg_password">Password</label>
-            <input type="text" asp-for="@Model.user.pass" class="form-control"
+            <input type="text" asp-for="@Model.password" class="form-control"
                    id="reg_password" oninput="checkPass()" maxlength="25" value="@Model.user.pass" required />
             <div class="invalid-feedback" id="reg_errorpass">
                 Please enter a
@@ -48,7 +48,7 @@
 
 		<div class="form-group">
 			<label for="reg_password">First Name</label>
-			<input type="text" asp-for="@Model.user.fName" class="form-control"
+			<input type="text" asp-for="@Model.fName" class="form-control"
 				   id="reg_fName" oninput="checkFName()" maxlength="25" value="@Model.user.fName" required />
 			<div class="invalid-feedback" id="reg_errorfName">
 				Please enter a
