--- a/sugarProject/Pages/Gallery.cshtml
+++ b/sugarProject/Pages/Gallery.cshtml
@@ -2,3 +2,19 @@
 @model sugarProject.Pages.GalleryModel
 @{
 }
+
+<div style="display: grid;" class="container">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div style="grid-row-start: 2; grid-row-end: 3; grid-column-start: 2; grid-column-end: 3;">6</div> 
+    <div>7</div>
+    <div>8</div>
+    <div>9</div>
+    <div>10</div>
+    <div>11</div>
+    <div>12</div>
+    <div>13</div>
+</div>
