--- a/sugarProject/Pages/Gallery.cshtml
+++ b/sugarProject/Pages/Gallery.cshtml
@@ -1,20 +1,31 @@
 ﻿@page
 @model sugarProject.Pages.GalleryModel
 @{
+    <head>
+    <style>
+        .center{
+				width: 60%;
+        }
+        .backgroundDiv{
+            width: 700px;
+        }
+		</style>
+		<script src="~/js/gallery.js"></script>
+    </head>
 }
 
-<div style="display: grid;" class="container">
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    <div>5</div>
-    <div style="grid-row-start: 2; grid-row-end: 3; grid-column-start: 2; grid-column-end: 3;">6</div> 
-    <div>7</div>
-    <div>8</div>
-    <div>9</div>
-    <div>10</div>
-    <div>11</div>
-    <div>12</div>
-    <div>13</div>
+<div style="display: grid; grid-template-columns: 150px 150px 150px 150px; grid-template-rows: 100px 100px 100px 100px; gap: 10px; height: 400px; max-width: 400px; margin: 0 auto; align-items: center; justify-content: center;">
+    <div style="text-align: center;"><img onmouseover="enlarge(2)" src="/imgs/BreadTypes/b2.jpg" style="width:150px; height:100px;"></div>
+    <div style="text-align: center;"><img onmouseover="enlarge(3)" src="/imgs/BreadTypes/b3.jpg" style="width:150px; height:100px;"></div>
+    <div style="text-align: center;"><img onmouseover="enlarge(4)" src="/imgs/BreadTypes/b4.jpg" style="width:150px; height:100px;"></div>
+    <div style="text-align: center;"><img onmouseover="enlarge(5)" src="/imgs/BreadTypes/b5.jpg" style="width:150px; height:100px;"></div>
+    <div style="text-align: center;"><img onmouseover="enlarge(6)" src="/imgs/BreadTypes/b6.jpg" style="width:150px; height:100px;"></div>
+    <div style="grid-column: 2 / span 2; grid-row: 2 / span 2; text-align: center;"><img id="mainImg" src="/imgs/BreadTypes/b13.jpg" style="width:300px; height:200px;"></div>
+    <div style="text-align: center;"><img onmouseover="enlarge(8)" src="/imgs/BreadTypes/b8.jpg" style="width:150px; height:100px;"></div>
+    <div style="text-align: center;"><img onmouseover="enlarge(9)" src="/imgs/BreadTypes/b9.jpg" style="width:150px; height:100px;"></div>
+    <div style="text-align: center;"><img onmouseover="enlarge(10)" src="/imgs/BreadTypes/b10.jpg" style="width:150px; height:100px;"></div>
+    <div style="text-align: center;"><img onmouseover="enlarge(11)" src="/imgs/BreadTypes/b11.jpg" style="width:150px; height:100px;"></div>
+    <div style="text-align: center;"><img onmouseover="enlarge(12)" src="/imgs/BreadTypes/b12.jpg" style="width:150px; height:100px;"></div>
+    <div style="text-align: center;"><img onmouseover="enlarge(13)" src="/imgs/BreadTypes/b13.jpg" style="width:150px; height:100px;"></div>
+    <div style="text-align: center;"><img onmouseover="enlarge(7)" src="/imgs/BreadTypes/b7.jpg" style="width:150px; height:100px;"></div>
 </div>
