--- a/sugarProject/Pages/Shared/_SugarInBread.cshtml
+++ b/sugarProject/Pages/Shared/_SugarInBread.cshtml
@@ -57,7 +57,7 @@
                 </h1>
             </div>
 
-            <div style="background-color:blanchedalmond">
+            <div style="background-color:blanchedalmond" class="backgroundDiv">
 
 
 
