--- a/sugarProject/Pages/Gallery.cshtml
+++ b/sugarProject/Pages/Gallery.cshtml
@@ -9,6 +9,20 @@
         .backgroundDiv{
             width: 700px;
         }
+
+            
+            #mainImg {
+                width: 300px;
+                height: 200px;
+                transition: transform 0.1s ease-in-out, opacity 0.1s ease-in-out; 
+                opacity: 1; 
+                transform: scale(1); 
+            }
+
+                #mainImg.pop-in {
+                    opacity: 0;
+                    transform: scale(0.8);
+                }
 		</style>
 		<script src="~/js/gallery.js"></script>
     </head>
