--- a/sugarProject/Pages/Shared/_SugarInBread.cshtml
+++ b/sugarProject/Pages/Shared/_SugarInBread.cshtml
@@ -24,6 +24,7 @@
                 <li><a asp-page="/sugarInBread">Sugar in bread</a></li>
                 <li><a asp-page="/ShowUsers">Show users</a></li>
                 <li><a asp-page="/Register">Register</a></li>
+				<li><a asp-page="/Gallery">Gallery</a></li>
                 <li style="margin-left: 700px; display: inline-flex; align-items: center;">
                     Welcome @ViewData["UserName"],
                     @{
