--- a/sugarProject/Pages/Admin.cshtml
+++ b/sugarProject/Pages/Admin.cshtml
@@ -5,7 +5,7 @@
 }
 <style>
 	.center{
-		width: 60%;
+		width: 70%;
 	}
 	body{
 		text-decoration: none;
@@ -38,6 +38,7 @@
 	<table class="table table-striped table-bordered table-hover table-dark table-responsive">
 		<thead>
 			<tr>	
+				<th>Delete</th>
 				@foreach (string displayColumn in @Model.displayColumns)
 				{
 					<th>@displayColumn</th>
@@ -49,6 +50,8 @@
 			@foreach (DataRow row in @Model.DataTableUsers.Rows)
 			{			
 				<tr>
+					<td><a asp-page="DeleteUser" asp-route-Id="@row["Id"]"> Delete</a></td>
+
 					@foreach (string displayColumn in @Model.displayColumns)
 					{
 
