admin imlemented ADD protection to some pages like login

--- a/sugarProject/Pages/Logout.cshtml
+++ b/sugarProject/Pages/Logout.cshtml
@@ -1,4 +1,8 @@
 ﻿@page
 @model sugarProject.Pages.LogoutModel
 @{
+    // from login (or null if not logging in yet)
+    HttpContext.Session.SetString("fName", string.Empty);
+    // from login (or null if not logging in yet)
+    HttpContext.Session.SetString("Role", "Guest");
 }
