--- a/sugarProject/Pages/Shared/_SugarInBread.cshtml
+++ b/sugarProject/Pages/Shared/_SugarInBread.cshtml
@@ -22,6 +22,14 @@
                 <li><a asp-page="/index">Home</a></li>
                 <li><a asp-page="/secondaryPage">Secondary page</a></li>
                 <li><a asp-page="/sugarInBread">Sugar in bread</a></li>
+                @{
+                    if (ViewData["UserName"] == "Guest"){
+                        <li><a asp-page="/Register">Register</a></li>
+                    }
+
+                }
+                <li><a asp-page="/Gallery">Gallery</a></li>
+
                 @{if ("Admin" == Context.Session.GetString("Role"))
                 {
                         <li><a asp-page="/ShowUsers">Show users</a></li>
@@ -29,9 +37,7 @@
 
                 }}
 
-                <li><a asp-page="/ShowUsers">Show users</a></li>
-                <li><a asp-page="/Register">Register</a></li>
-				<li><a asp-page="/Gallery">Gallery</a></li>
+                
                 <li style="margin-left: 400px; display: inline-flex; align-items: center;">
                     Welcome @ViewData["UserName"],
                     @{
